# deadleaves

./: .gitignore  .readthedocs.yaml  LICENCE.txt  README.md  paper.bib  paper.md  pyproject.toml  runserver.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: draft-pdf.yml  release.yml  test.yml
dead_leaves/: __init__.py  dead_leaves.py  distributions.py  leaf_masks.py  utils.py
deadleaves/: __init__.py  deadleaves.py  distributions.py  leaf_masks.py  utils.py
docs/: _config.yml  _toc.yml  conf.py  dead_leaves_scraper.py  index.md  make.bat
docs/_static/: custom.css  pygments.css
docs/development/: contributing.md
docs/getting_started/: index.md  installation.md  quickstart.md
docs/parameterization/: distributions.md  index.md  textures.md
docs/user_guides/: colors.md  dependencies.md  distributions.md  index.md  leaf_topology.md  partial_sampling.md  shapes.md  textures.md
examples/: demo.ipynb
examples/gallery/: GALLERY_HEADER.rst  plot_ex1.py  plot_ex10.py  plot_ex11.py  plot_ex12.py  plot_ex13.py  plot_ex14.py  plot_ex2.py  plot_ex3.py  plot_ex4.py  plot_ex5.py  plot_ex6.py  plot_ex7.py  plot_ex8.py  plot_ex9.py
examples/images/: image_copyright.txt
tests/: test_dead_leaves.py  test_deadleaves.py  test_distributions.py  test_leaf_masks.py
