[project]
name = "deadleaves"
version = "0.1.0"
authors = [
    { name = "Lynn Schmittwilken", email = "lynn.schmittwilken@tu-darmstadt.de" },
    { name = "Swantje Mahncke", email = "swantje.mahncke@tu-darmstadt.de" },
]
maintainers = [
    { name = "Lynn Schmittwilken", email = "lynn.schmittwilken@tu-darmstadt.de" },
    { name = "Swantje Mahncke", email = "swantje.mahncke@tu-darmstadt.de" },
]
description = "A package to generate dead leaves images."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
    "torch>=2.8.0",
    "torchquad>=0.5.0",
    "torchvision>=0.23.0",
]

[tool.setuptools.packages.find]
where   = ["."]
include = ["deadleaves*"]
exclude = ["examples*", "test*"]

[dependency-groups]
test = ["pytest>=8.4.2"]
docs = [
    "myst-nb",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-design",
    "sphinx-gallery",
    "sphinx_copybutton",
]
dev = [{ include-group = "docs" }, { include-group = "test" }]

[project.urls]
repository = "https://github.com/ag-perception-wallis-lab/deadleaves.git"

[build-system]
requires      = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
